--- a/package.json
+++ b/package.json
@@ -24,32 +24,31 @@
     "prepublishOnly": "yarn test && yarn lint && yarn build"
   },
   "devDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "@types/jest": "^26.0.9",
+    "@types/lodash": "^4.14.159",
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
     "css-loader": "^4.2.1",
+    "csstype": "^3.0.2",
     "jest": "^26.4.0",
     "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.1.0",
     "rimraf": "^3.0.2",
     "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
     "ts-jest": "^26.2.0",
     "ts-loader": "^8.0.2",
     "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.3.0",
     "tslint-react": "^5.0.0",
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "@types/lodash": "^4.14.159",
-    "@types/react": "^16.9.46",
-    "@types/react-dom": "^16.9.8",
-    "csstype": "^3.0.2"
+    "webpack-cli": "^3.3.12"
   },
-  "dependencies": {
-    
-  },
+  "dependencies": {},
   "peerDependencies": {
     "lodash": "^4.17.20",
     "react": "^16.13.1",
